MDEV-17001 JSON_MERGE returns nullwhen merging empty array.

Don't add the comma if nothing appended to the array.